[package]
name = "rustybeer"
version = "0.1.0"
authors = ["Heikki Hellgren <heiccih@gmail.com>", "mlatief", "Joseph Russell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
futures = "0.1.29"
measurements = "0.10.3"
