[package]
name = "rustybeer"
version = "0.1.0"
authors = ["Heikki Hellgren <heiccih@gmail.com>", "mlatief", "Joseph Russell"]
edition = "2018"

[dependencies]
clap = "2.33.*"
measurements = "0.10.3"
regex = "1"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
once_cell = "1.4.1"
