[package]
name = "rustybeer"
version = "0.1.0"
authors = ["Heikki Hellgren <heiccih@gmail.com>", "mlatief", "Joseph Russell"]
edition = "2018"

[dependencies]
csv = "1.1"
measurements = "0.10.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.4.0"
rustybeer-util = { version = "0.1.0", path = "../rustybeer-util"}
